# langchain-rag-agent

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
eval_qna/: qna_data_medium.csv
