[project]
name = "langchain-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.3",
    "deepeval>=2.9.1",
    "gradio>=5.29.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-graph-retriever[chroma]>=0.8.0",
    "langchain-ollama>=0.3.2",
    "langchain-openai[embeddings]>=0.3.17",
    "pandas>=2.2.3",
    "pypdf>=5.5.0",
    "wonderwords>=2.2.0",
]
